# Vaughan-Tauri

./: .gitignore  CONTRIBUTING.md  README.md  capture_errors.js  fix_imports.js  gen_sounds.ps1  git-strategy.md  migrate_tracing.js  performance-ux-considerations.md  replace_logging.ps1  replace_logging.py  requirements.md  temp_rpc_handler.rs
.github/workflows/: check-bindings.yml  release.yml
.kiro/specs/Vaughan-Tauri/: AI-AGENT-GUIDE.md  CONCRETE-EXAMPLES.md  CRITICAL-REQUIREMENTS.md  FINAL-AUDIT.md  MULTI-CHAIN-ARCHITECTURE.md  NEXT-STEPS.md  PATH-TO-100-PERCENT.md  PHASE-0-COMPLETE.md  PHASE-0-POC.md  PHASE-1-DECISIONS.md  PHASE-1-PLAN.md  QUICK-START.md  README.md  RISK-REGISTER.md  UNIVERSAL-PROMPT.md  controller-lifecycle.md  design.md  privacy_selector_plan.md  project-structure.md  requirements.md  security-considerations.md  tasks.md  tauri-2.0-specifics.md  testing-strategy.md
.kiro/specs/Vaughan-Tauri/Vaughan-Tauri-notes/: TAURI_CONTROLLER_INITIALIZATION_SOLUTION.md
.kiro/specs/external_refs/: Alloy-Cheatsheet.md  Alloy-Error-Handling.md  EIP-1193.md  REFERENCE-INDEX.md  React-Hooks-Cheatsheet.md  Tauri-2.0-Architecture-ACL.md  Tauri-State-Management.md  VERIFICATION-COMPLETE.md
.kiro/steering/: vaughan-tauri-rules.md
Vaughan/: .gitignore  APPROVAL-MODAL-FIX.md  CSP-BYPASS-ARCHITECTURE.md  IFRAME-MODE-SUCCESS.md  INTEGRATION-TEST-RESULTS.md  INTEGRATION-TEST-SUCCESS.md  PHASE-3-DAY-1-PROGRESS.md  PHASE-3-PLAN-V2.md  PHASE-3.2-STATUS.md  PHASE-3.4-TASK-LIST.md  PHASE-3.6-WALLETCONNECT-PLAN.md  README.md  TESTING-GUIDE.md  WEBSOCKET-BRIDGE-COMPLETE.md  WEBSOCKET-BRIDGE-READY.md  WORKFLOW-IMPROVEMENTS-COMPLETE.md  dapp-browser.html  package-lock.json  package.json  tailwind.config.js  test.html  vite.config.ts
Vaughan-Tauri-main/Vaughan-Tauri-main/: SECURITY.md  package-lock.json
Vaughan-Tauri-main/Vaughan-Tauri-main/Vaughan/: IPC-IMPLEMENTATION.md  clear-approvals.html  package-lock.json  package.json
Vaughan-Tauri-main/Vaughan-Tauri-main/Vaughan/src/: App.tsx
Vaughan-Tauri-main/Vaughan-Tauri-main/Vaughan/src-tauri/: Cargo.toml  DAY-11-COMPLETE.md  DAY-2-COMPLETE.md  DAY-4-5-COMPLETE.md  DAY-4-COMPLETE.md  DAY-6-COMPLETE.md  DAY-8-COMPLETE.md  PHASE-1.5-COMPLETE.md  rustfmt.toml  tauri.conf.json
Vaughan/docs-websocket/: 01-provider-script.md
Vaughan/docs/architecture/: AUTO-CONNECT-FEATURE.md  BALANCE-POLLING.md  IPC-IMPLEMENTATION.md  PHISHING-PROTECTION.md  VAUGHAN-VS-METAMASK-COMPARISON.md  WHY-WEBSOCKET-NOT-TAURI-IPC.md  WINDOW-LABEL-INJECTION.md
Vaughan/docs/architecture/websocket-docs/: 03-rpc-handler.md  04-message-flow.md  05-csp-bypass-explained.md  source-provider-inject-extension.js  (+2 more)
Vaughan/docs/development/: OPENSEA-DEBUG-GUIDE.md  WSS-IMPLEMENTATION.md
Vaughan/public/: dapp-proxy.html  provider-inject-extension.js  provider-inject.js
Vaughan/scripts/: patch-bindings.cjs
Vaughan/src/: App.tsx  dapp-browser.tsx  index.css  main.tsx
Vaughan/src-tauri/: .gitignore  ACCOUNT-PERSISTENCE-ISSUE.md  BACKEND-COMPLETE.md  CONTROLLER-ANALYSIS.md  Cargo.toml  DAY-1-COMPLETE.md  DAY-10-COMPLETE.md  DAY-12-COMPLETE.md  DAY-13-COMPLETE.md  DAY-14-COMPLETE.md  DAY-3-COMPLETE.md  DAY-5-START.md  DAY-7-COMPLETE.md  DAY-9-COMPLETE.md  DAY-9-PROGRESS.md  NETWORK-CONTROLLER-ANALYSIS.md  PHASE-1-COMPLETE.md  PHASE-1.5-PLAN.md  PHASE-1.6-ACCOUNT-PERSISTENCE.md  PHASE-2.5-BALANCE-POLISH.md  WALLET-PRICE-CONTROLLER-ANALYSIS.md  append_watch_asset.cjs  capture_cargo_errors.cjs  cargo_output.txt  clippy.toml  err.txt  errors.txt  extract_eth_rpc.cjs  extract_handlers.cjs  extract_session.cjs  fix_rpc_visibility.cjs  rewrite_router.cjs  tauri.conf.json  test_key.rs
Vaughan/src-tauri/capabilities/: dapp-access.json  dapp.json  default.json  wallet-commands.json
Vaughan/src-tauri/src/: lib.rs  state.rs
Vaughan/src-tauri/src/audio/: mod.rs
Vaughan/src-tauri/src/chains/: README.md  mod.rs  types.rs
Vaughan/src-tauri/src/chains/evm/: README.md  adapter.rs  mod.rs  networks.rs  utils.rs
Vaughan/src-tauri/src/commands/: README.md  audio.rs  dapp.rs  dapp_ipc.rs  history.rs  mod.rs  network.rs  persistence.rs  provider-inject-ipc.js  token.rs  transaction.rs  wallet.rs  window.rs
Vaughan/src-tauri/src/core/: README.md  mod.rs  network.rs  persistence.rs  price.rs  wallet.rs
Vaughan/src-tauri/src/dapp/: approval.rs  cert.rs  health.rs  logging.rs  mod.rs  profiling.rs  proxy.rs  rate_limiter.rs  rpc_handler.rs  session.rs  websocket.rs  window_registry.rs
Vaughan/src-tauri/src/dapp/rpc/: eth.rs  mod.rs  personal.rs  wallet.rs
Vaughan/src-tauri/src/error/: mod.rs
Vaughan/src-tauri/src/models/: README.md  dapp.rs  erc20.rs  mod.rs  token.rs  wallet.rs
Vaughan/src-tauri/src/monitoring/: balance_watcher.rs  mod.rs
Vaughan/src-tauri/src/proxy/: mod.rs
Vaughan/src-tauri/src/security/: README.md  encryption.rs  hd_wallet.rs  keyring_service.rs  mod.rs
Vaughan/src-tauri/src/websocket/: mod.rs
Vaughan/src-tauri/tests/: integration.rs  poc4_integration.rs  properties.rs
Vaughan/src-tauri/tests/archive/: poc4_integration.rs
Vaughan/src-tauri/tests/common/: mock_rpc.rs  mod.rs
Vaughan/src-tauri/tests/e2e/: README.md
Vaughan/src-tauri/tests/properties/: address_properties.rs
Vaughan/src-tauri/web/src/bindings/: tauri-commands.ts
Vaughan/src/hooks/: useApprovalPolling.ts  useExternalWindowBridge.ts  useProviderBridge.ts  useWalletConnect.ts
Vaughan/src/provider/: index.ts  provider-inject-extension.js  provider-inject-ipc.js  provider-inject-native.js  provider-inject.js  provider-websocket.js  types.ts
Vaughan/src/services/: tauri.ts  walletconnect.ts
Vaughan/src/types/: index.ts
Vaughan/src/utils/: constants.ts  format.ts  validation.ts  whitelistedDapps.ts
Vaughan/src/views/: index.ts
Vaughan/tests/html/: dapp-test-eip6963.html  dapp-test-simple.html  proxy-test.html
Vaughan/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Vaughan/web/src/: App.tsx  index.css  levelup.d.ts  main.tsx
Vaughan/web/src-tauri/: tauri.conf.json
web/src/bindings/: tauri-commands.ts
(+241 files in other folders)
