[package]
name = "vaughan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaughan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.1", features = ["full"] }
async-trait = "0.1"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"       # Global state initialization
uuid = { version = "1.6", features = ["v4", "serde"] }  # UUID generation
urlencoding = "2.1"       # URL encoding for proxy URLs
axum = "0.7"              # HTTP server for proxy
tower = "0.4"             # HTTP middleware
tokio-tungstenite = "0.21"  # WebSocket server
futures-util = "0.3"      # Stream utilities for WebSocket

# Security dependencies (Phase 1.5)
keyring = "2.0"           # OS keychain integration (Windows/macOS/Linux)
bip39 = "2.0"             # BIP-39 mnemonic generation (12/24 words)
coins-bip32 = "0.8"       # BIP-32 HD wallet derivation
aes-gcm = "0.10"          # AES-GCM encryption (AEAD)
argon2 = "0.5"            # Argon2 key derivation (password hashing)
secrecy = "0.8"           # Secret protection in memory
rand = "0.8"              # Secure random number generation
base64ct = { version = "1.6", features = ["alloc"] }  # Base64 encoding
hex = "0.4"               # Hex encoding/decoding

