[package]
name = "vaughan"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "vaughan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
specta = { version = "2.0.0-rc.5", features = ["export"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"

alloy = { version = "1.7.3", default-features = false, features = [
    "std",
    "network",
    "providers",
    "provider-http",
    "reqwest",
    "signers",
    "signer-local",
    "rpc-types-eth",
    "consensus",
    "contract",
    "sol-types",
    "rlp",
    "dyn-abi",
    "json",
    "transports",
    "rpc-client"
] }
# alloy-provider and others are re-exported or handled by alloy features
alloy-dyn-abi = { version = "1.5.7", features = ["eip712"] }

async-trait = "0.1"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
urlencoding = "2.1"
dirs = "5.0"
keyring = "2.0"
bip39 = "2.0"
coins-bip32 = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
secrecy = "0.8"
rand = "0.8"
base64ct = { version = "1.6", features = ["alloc"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1.10.0"
wiremock = "0.6.5"

[dependencies.rodio]
version = "0.19"
default-features = false
features = ["symphonia-mp3", "symphonia-wav"]
